# DevTools

./: .env.tpl  .pre-commit-config.yaml  .releaserc.json  LICENSE  Makefile  README.md  _01_get_geosbr.py  _02_fill_counties.py  pyproject.toml
.github/workflows/: linux.yml  release.yaml
conda/: dev.yaml
devtools/: __init__.py
devtools/database/: fill_municipalities.py  fill_population.py  fill_states.py  fill_stations.py  get_geosbr.py  models.py  settings.py
devtools/database/cli/: fill_counties.py  fill_estados.py  get_geosbr.py  update_mun_w_pop.py
devtools/database/data/legacy/: estimativa_pop_municipios_2020.csv
devtools/database/schemas/: schemas_dengue.sql
devtools/database/scripts/: create_schemas.sh  dump_database.sh  dump_dbschemas.sh  prepare_db_data.sh
devtools/database/setup/: 01-create_db_roles.sh  01-prepare_database.sh  02-restore_database.sh
devtools/tests/: test_02_fill_counties.py  test_devtools.py
main/database/: settings.py
main/database/cli/: fill_counties.py  fill_estados.py  get_geosbr.py  update_mun_w_pop.py
main/database/datasets/: DBT_2022_Municipios.csv  POP2022_Municipios_Edit.csv
main/database/datasets/legacy/: estimativa_pop_municipios_2016.csv
main/database/scripts/: create_schemas.sh  dump_database.sh
main/tests/: test_01_get_geosbr.py  test_02_fill_counties.py
