[tool.poetry]
name = "DevTools"
version = "0.1.0"
readme = "README.md"
description='Creates the schemas and loads initial data into the database'
authors = ["Sandro Loch <es.loch@gmail.com>"]
license = "MIT"
repository = "https://github.com/AlertaDengue/DevTools.git"
homepage = "https://github.com/AlertaDengue/DevTools.git"

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [  #! Update me
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: MIT",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]

packages = [
    { include = "devtools" },
]

[tool.poetry.dependencies]
python = "^3.11"
SQLAlchemy = "^1.4.44"
pandas = "^1.5.2"
loguru = "^0.6.0"
geobr = "^0.2.0"



[tool.poetry.dev-dependencies]
pytest = "*"


[tool.poetry.group.dev.dependencies]
responses = "^0.22.0"
pre-commit = "^3.1.1"
flake8 = "^6.0.0"
black = "^23.1.0"
isort = "^5.12.0"
pytest = "^7.2.2"
ipython = "^8.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
# https://github.com/psf/black
target-version = ["py311"]
line-length = 79
color = true

exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
    | migrations/*
)/
'''

[tool.isort]
profile = "black"
src_paths = ["isort", "test"]
